--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,19 @@
+# Reference: https://github.com/pinterest/PINRemoteImage/blob/master/.travis.yml
+#            https://github.com/Alamofire/Alamofire/blob/master/.travis.yml
 language: objective-c
 osx_image: xcode6.4
 env:
   global:
   - LC_CTYPE=en_US.UTF-8
   - LANG=en_US.UTF-8
+  matrix:
+  - SCHEME=Ji SDK=iphonesimulator7.0
+  - SCHEME=Ji SDK=iphonesimulator7.1
+  - SCHEME=Ji SDK=iphonesimulator8.4
+
 before_install:
   - gem install cocoapods --no-rdoc --no-ri --no-document --quiet
   - gem install xcpretty --no-rdoc --no-ri --no-document --quiet
+
+script:
+  - xctool -project Ji.xcodeproj -scheme $SCHEME -sdk $SDK ONLY_ACTIVE_ARCH=NO
