--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,7 @@ env:
   - LC_CTYPE=en_US.UTF-8
   - LANG=en_US.UTF-8
   matrix:
-  - SCHEME=Ji SDK=iphonesimulator7.0
-  - SCHEME=Ji SDK=iphonesimulator7.1
+  - SCHEME=Ji SDK=iphonesimulator
   - SCHEME=Ji SDK=iphonesimulator8.4
 
 before_install:
