--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,14 @@
 # Reference: https://github.com/pinterest/PINRemoteImage/blob/master/.travis.yml
 #            https://github.com/Alamofire/Alamofire/blob/master/.travis.yml
 language: objective-c
-osx_image: xcode6.4
+osx_image: xcode7
 env:
   global:
   - LC_CTYPE=en_US.UTF-8
   - LANG=en_US.UTF-8
   matrix:
-  - SCHEME=Ji SDK=iphonesimulator
-  - SCHEME=Ji SDK=iphonesimulator8.4
+  - SCHEME=Ji SDK=iphonesimulator9.0
+  - SCHEME=OSX SDK=macosx10.11
 
 before_install:
   - gem install cocoapods --no-rdoc --no-ri --no-document --quiet
