--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,8 @@ env:
   - LC_CTYPE=en_US.UTF-8
   - LANG=en_US.UTF-8
   matrix:
-  - SCHEME=Ji SDK=iphonesimulator9.0
-# - SCHEME=Ji SDK=macosx10.11
+  - SCHEME="Ji iOS" SDK=iphonesimulator9.0
+  - SCHEME="Ji OSX" SDK=macosx10.11
 
 before_install:
   - gem install cocoapods --no-rdoc --no-ri --no-document --quiet
