--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ env:
   matrix:
   - SCHEME="Ji iOS" SDK=iphonesimulator9.0
   - SCHEME="Ji OSX" SDK=macosx10.11
-  - SCHEME="Ji watchOS" SDK=watchos2.0
-  - SCHEME="Ji tvOS" SDK=appletvos9.0
+  # - SCHEME="Ji watchOS" SDK=watchsimulator2.0
+  # - SCHEME="Ji tvOS" SDK=appletvos9.0
 
 before_install:
   - gem install cocoapods --no-rdoc --no-ri --no-document --quiet
@@ -19,6 +19,4 @@ before_install:
 script:
   - set -o pipefail
   - xcodebuild -version
-  # - xcodebuild -project Ji.xcodeproj -scheme "$SCHEME" -sdk "$SDK" -destination "$DESTINATION" 
-  #   -configuration Debug ONLY_ACTIVE_ARCH=NO test | xcpretty -c
   - xctool -project Ji.xcodeproj -scheme "$SCHEME" -sdk "$SDK" ONLY_ACTIVE_ARCH=NO
