--- a/Ji.xcodeproj/xcshareddata/xcschemes/Ji tvOS.xcscheme
+++ b/Ji.xcodeproj/xcshareddata/xcschemes/Ji tvOS.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "E43A4E231BD842B6003CB3D7"
-               BuildableName = "Ji tvOS.framework"
+               BuildableName = "Ji.framework"
                BlueprintName = "Ji tvOS"
                ReferencedContainer = "container:Ji.xcodeproj">
             </BuildableReference>
@@ -43,7 +43,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E43A4E231BD842B6003CB3D7"
-            BuildableName = "Ji tvOS.framework"
+            BuildableName = "Ji.framework"
             BlueprintName = "Ji tvOS"
             ReferencedContainer = "container:Ji.xcodeproj">
          </BuildableReference>
@@ -65,7 +65,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E43A4E231BD842B6003CB3D7"
-            BuildableName = "Ji tvOS.framework"
+            BuildableName = "Ji.framework"
             BlueprintName = "Ji tvOS"
             ReferencedContainer = "container:Ji.xcodeproj">
          </BuildableReference>
@@ -83,7 +83,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E43A4E231BD842B6003CB3D7"
-            BuildableName = "Ji tvOS.framework"
+            BuildableName = "Ji.framework"
             BlueprintName = "Ji tvOS"
             ReferencedContainer = "container:Ji.xcodeproj">
          </BuildableReference>
