build for analyzing to false

--- a/Ji.xcodeproj/xcshareddata/xcschemes/Ji iOS.xcscheme
+++ b/Ji.xcodeproj/xcshareddata/xcschemes/Ji iOS.xcscheme
@@ -25,7 +25,7 @@
             buildForRunning = "YES"
             buildForProfiling = "NO"
             buildForArchiving = "NO"
-            buildForAnalyzing = "YES">
+            buildForAnalyzing = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "E43D75051B8FE82100702114"
