--- a/Ji.xcodeproj/xcshareddata/xcschemes/Ji iOS.xcscheme
+++ b/Ji.xcodeproj/xcshareddata/xcschemes/Ji iOS.xcscheme
@@ -22,10 +22,10 @@
          </BuildActionEntry>
          <BuildActionEntry
             buildForTesting = "YES"
-            buildForRunning = "YES"
+            buildForRunning = "NO"
             buildForProfiling = "NO"
             buildForArchiving = "NO"
-            buildForAnalyzing = "YES">
+            buildForAnalyzing = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "E43D75051B8FE82100702114"
