--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 # Reference: https://github.com/pinterest/PINRemoteImage/blob/master/.travis.yml
 #            https://github.com/Alamofire/Alamofire/blob/master/.travis.yml
-language: objective-c
-osx_image: xcode9
+language: swift
+osx_image: xcode10.2
 env:
   global:
     - LC_CTYPE=en_US.UTF-8
