--- a/.travis.yml
+++ b/.travis.yml
@@ -7,54 +7,38 @@ env:
     - LC_CTYPE=en_US.UTF-8
     - LANG=en_US.UTF-8
 
-    - WORKSPACE=Ji.xcworkspace
+    - PROJECT="Ji.xcodeproj"
     - IOS_FRAMEWORK_SCHEME="Ji iOS"
     - MACOS_FRAMEWORK_SCHEME="Ji OSX"
     - TVOS_FRAMEWORK_SCHEME="Ji tvOS"
     - WATCHOS_FRAMEWORK_SCHEME="Ji watchOS"
-    - EXAMPLE_SCHEME="Example"
 
   matrix:
     # iOS
-    - DESTINATION="OS=11.0,name=iPhone X"           SCHEME="$IOS_FRAMEWORK_SCHEME"      RUN_TESTS="YES"   BUILD_EXAMPLE="YES"
-    - DESTINATION="OS=10.3.1,name=iPhone 7 Plus"    SCHEME="$IOS_FRAMEWORK_SCHEME"      RUN_TESTS="YES"   BUILD_EXAMPLE="YES"
-    - DESTINATION="OS=9.0,name=iPhone 6"            SCHEME="$IOS_FRAMEWORK_SCHEME"      RUN_TESTS="YES"   BUILD_EXAMPLE="YES"
+    - DESTINATION="OS=12.2,name=iPhone Xs"          SCHEME="$IOS_FRAMEWORK_SCHEME"
+    - DESTINATION="OS=11.4,name=iPhone X"           SCHEME="$IOS_FRAMEWORK_SCHEME"
 
     # macOS
-    - DESTINATION="arch=x86_64"                     SCHEME="$MACOS_FRAMEWORK_SCHEME"    RUN_TESTS="YES"   BUILD_EXAMPLE="NO"
+    - DESTINATION="arch=x86_64"                     SCHEME="$MACOS_FRAMEWORK_SCHEME"
 
     # tvOS
-    - DESTINATION="OS=10.2,name=Apple TV 1080p"     SCHEME="$TVOS_FRAMEWORK_SCHEME"     RUN_TESTS="YES"   BUILD_EXAMPLE="NO"
-    - DESTINATION="OS=9.0,name=Apple TV 1080p"      SCHEME="$TVOS_FRAMEWORK_SCHEME"     RUN_TESTS="YES"   BUILD_EXAMPLE="NO"
+    - DESTINATION="OS=12.2,name=Apple TV 4K"     SCHEME="$TVOS_FRAMEWORK_SCHEME"
+    - DESTINATION="OS=11.4,name=Apple TV 4K"     SCHEME="$TVOS_FRAMEWORK_SCHEME"
 
     # watchOS
-    - DESTINATION="OS=4.0,name=Apple Watch - 42mm"  SCHEME="$WATCHOS_FRAMEWORK_SCHEME"  RUN_TESTS="NO"    BUILD_EXAMPLE="NO"
-    - DESTINATION="OS=3.2,name=Apple Watch - 42mm"  SCHEME="$WATCHOS_FRAMEWORK_SCHEME"  RUN_TESTS="NO"    BUILD_EXAMPLE="NO"
-    - DESTINATION="OS=2.0,name=Apple Watch - 42mm"  SCHEME="$WATCHOS_FRAMEWORK_SCHEME"  RUN_TESTS="NO"    BUILD_EXAMPLE="NO"
+    - DESTINATION="OS=5.2,name=Apple Watch Series 4 - 44mm"  SCHEME="$WATCHOS_FRAMEWORK_SCHEME"
+    - DESTINATION="OS=4.2,name=Apple Watch Series 3 - 42mm"  SCHEME="$WATCHOS_FRAMEWORK_SCHEME"
 
 before_install:
-  - gem install cocoapods --pre --no-rdoc --no-ri --no-document --quiet
+  # - gem install cocoapods --pre --no-rdoc --no-ri --no-document --quiet
 
 script:
   - set -o pipefail
   - xcodebuild -version
   - xcodebuild -showsdks
 
-  # Build Framework in Debug and Run Tests if specified
-  - if [ $RUN_TESTS == "YES" ]; then
-      xcodebuild -workspace "$WORKSPACE" -scheme "$SCHEME" -destination "$DESTINATION" -configuration Debug ONLY_ACTIVE_ARCH=NO ENABLE_TESTABILITY=YES test | xcpretty;
-    else
-      xcodebuild -workspace "$WORKSPACE" -scheme "$SCHEME" -destination "$DESTINATION" -configuration Debug ONLY_ACTIVE_ARCH=NO build | xcpretty;
-    fi
+  ## Build for Debug with tests
+  - xcodebuild -project "$PROJECT" -scheme "$SCHEME" -destination "$DESTINATION" -configuration Debug | xcpretty;
 
-  # Build Framework in Release and Run Tests if specified
-  - if [ $RUN_TESTS == "YES" ]; then
-      xcodebuild -workspace "$WORKSPACE" -scheme "$SCHEME" -destination "$DESTINATION" -configuration Release ONLY_ACTIVE_ARCH=NO ENABLE_TESTABILITY=YES test | xcpretty;
-    else
-      xcodebuild -workspace "$WORKSPACE" -scheme "$SCHEME" -destination "$DESTINATION" -configuration Release ONLY_ACTIVE_ARCH=NO build | xcpretty;
-    fi
-
-  # Build Example in Debug if specified
-  - if [ $BUILD_EXAMPLE == "YES" ]; then
-      xcodebuild -workspace "$WORKSPACE" -scheme "$EXAMPLE_SCHEME" -destination "$DESTINATION" -configuration Debug ONLY_ACTIVE_ARCH=NO build | xcpretty;
-    fi
+  ## Build for Release
+  - xcodebuild -project "$PROJECT" -scheme "$SCHEME" -destination "$DESTINATION" -configuration Release | xcpretty;
